src/OpenCvSharpExtern/core_Mat.h

CVAPI(cv::MatExpr*) core_Mat_operatorUnaryMinus(cv::Mat *mat)
{
    cv::MatExpr expr = -(*mat);
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorAdd_MatMat(cv::Mat *a, cv::Mat *b)
{
    cv::MatExpr expr = (*a) + (*b);
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorAdd_MatScalar(cv::Mat *a, MyCvScalar s)
{
    cv::MatExpr expr = (*a) + cpp(s);
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorAdd_ScalarMat(MyCvScalar s, cv::Mat *a)
{
    cv::MatExpr expr = cpp(s) + (*a); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorMinus_Mat(cv::Mat *a)
{
    cv::MatExpr expr = -(*a);
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorSubtract_MatMat(cv::Mat *a, cv::Mat *b)
{
    cv::MatExpr expr = (*a) - (*b);
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorSubtract_MatScalar(cv::Mat *a, MyCvScalar s)
{
    cv::MatExpr expr = (*a) - cpp(s);
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorSubtract_ScalarMat(MyCvScalar s, cv::Mat *a)
{
    cv::MatExpr expr = cpp(s) - (*a); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorMultiply_MatMat(cv::Mat *a, cv::Mat *b)
{
    cv::MatExpr expr = (*a) * (*b);
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorMultiply_MatDouble(cv::Mat *a, double s)
{
    cv::MatExpr expr = (*a) * s;
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorMultiply_DoubleMat(double s, cv::Mat *a)
{
    cv::MatExpr expr = s * (*a); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorDivide_MatMat(cv::Mat *a, cv::Mat *b)
{
    cv::MatExpr expr = (*a) / (*b);
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorDivide_MatDouble(cv::Mat *a, double s)
{
    cv::MatExpr expr = (*a) / s;
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorDivide_DoubleMat(double s, cv::Mat *a)
{
    cv::MatExpr expr = s / (*a); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorAnd_MatMat(cv::Mat *a, cv::Mat *b)
{
    cv::MatExpr expr = (*a) & (*b);
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorAnd_MatDouble(cv::Mat *a, double s)
{
    cv::MatExpr expr = (*a) & s;
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorAnd_DoubleMat(double s, cv::Mat *a)
{
    cv::MatExpr expr = s & (*a); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorOr_MatMat(cv::Mat *a, cv::Mat *b)
{
    cv::MatExpr expr = (*a) | (*b);
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorOr_MatDouble(cv::Mat *a, double s)
{
    cv::MatExpr expr = (*a) | s;
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorOr_DoubleMat(double s, cv::Mat *a)
{
    cv::MatExpr expr = s | (*a); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorXor_MatMat(cv::Mat *a, cv::Mat *b)
{
    cv::MatExpr expr = (*a) ^ (*b);
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorXor_MatDouble(cv::Mat *a, double s)
{
    cv::MatExpr expr = (*a) ^ s;
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorXor_DoubleMat(double s, cv::Mat *a)
{
    cv::MatExpr expr = s ^ (*a); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorNot(cv::Mat *a)
{
    cv::MatExpr expr = ~(*a);
    return new cv::MatExpr(expr);
}
// Comparison Operators

// <
CVAPI(cv::MatExpr*) core_Mat_operatorLT_MatMat(cv::Mat *a, cv::Mat *b)
{
    cv::MatExpr expr = (*a) < (*b); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorLT_DoubleMat(double a, cv::Mat *b)
{
    cv::MatExpr expr = a < (*b); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorLT_MatDouble(cv::Mat *a, double b)
{
    cv::MatExpr expr = (*a) < b; 
    return new cv::MatExpr(expr);
}
// <=
CVAPI(cv::MatExpr*) core_Mat_operatorLE_MatMat(cv::Mat *a, cv::Mat *b)
{
    cv::MatExpr expr = (*a) <= (*b); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorLE_DoubleMat(double a, cv::Mat *b)
{
    cv::MatExpr expr = a <= (*b); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorLE_MatDouble(cv::Mat *a, double b)
{
    cv::MatExpr expr = (*a) <= b; 
    return new cv::MatExpr(expr);
}
// >
CVAPI(cv::MatExpr*) core_Mat_operatorGT_MatMat(cv::Mat *a, cv::Mat *b)
{
    cv::MatExpr expr = (*a) > (*b); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorGT_DoubleMat(double a, cv::Mat *b)
{
    cv::MatExpr expr = a > (*b); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorGT_MatDouble(cv::Mat *a, double b)
{
    cv::MatExpr expr = (*a) > b; 
    return new cv::MatExpr(expr);
}
// >=
CVAPI(cv::MatExpr*) core_Mat_operatorGE_MatMat(cv::Mat *a, cv::Mat *b)
{
    cv::MatExpr expr = (*a) >= (*b); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorGE_DoubleMat(double a, cv::Mat *b)
{
    cv::MatExpr expr = a >= (*b); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorGE_MatDouble(cv::Mat *a, double b)
{
    cv::MatExpr expr = (*a) >= b; 
    return new cv::MatExpr(expr);
}
// ==
CVAPI(cv::MatExpr*) core_Mat_operatorEQ_MatMat(cv::Mat *a, cv::Mat *b)
{
    cv::MatExpr expr = (*a) == (*b); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorEQ_DoubleMat(double a, cv::Mat *b)
{
    cv::MatExpr expr = a == (*b); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorEQ_MatDouble(cv::Mat *a, double b)
{
    cv::MatExpr expr = (*a) == b; 
    return new cv::MatExpr(expr);
}
// !=
CVAPI(cv::MatExpr*) core_Mat_operatorNE_MatMat(cv::Mat *a, cv::Mat *b)
{
    cv::MatExpr expr = (*a) != (*b); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorNE_DoubleMat(double a, cv::Mat *b)
{
    cv::MatExpr expr = a != (*b); 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_Mat_operatorNE_MatDouble(cv::Mat *a, double b)
{
    cv::MatExpr expr = (*a) != b; 
    return new cv::MatExpr(expr);
}
CVAPI(cv::MatExpr*) core_abs_Mat(cv::Mat *m)
{
    cv::MatExpr ret = cv::abs(*m);
    return new cv::MatExpr(ret);
}
CVAPI(int) core_Mat_nSetB(cv::Mat *obj, int row, int col, uchar *vals, int valsLength)
{
    return internal_Mat_set<char>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetS(cv::Mat *obj, int row, int col, short *vals, int valsLength)
{
    return internal_Mat_set<short>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetI(cv::Mat *obj, int row, int col, int *vals, int valsLength)
{
    return internal_Mat_set<int>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetF(cv::Mat *obj, int row, int col, float *vals, int valsLength)
{
    return internal_Mat_set<float>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetD(cv::Mat *obj, int row, int col, double *vals, int valsLength)
{
    int rest = ((obj->rows - row) * obj->cols - col) * obj->channels();
    int count = valsLength;
    if (count > rest)
        count = rest;
    int res = count;
    double* src = vals;
    int r, c;
    for (c = col; c<obj->cols && count > 0; c++)
    {
        switch (obj->depth()) 
        {
        case CV_8U:  internal_set_item<uchar>(obj, row, c, src, count); break;
        case CV_8S:  internal_set_item<schar>(obj, row, c, src, count); break;
        case CV_16U: internal_set_item<ushort>(obj, row, c, src, count); break;
        case CV_16S: internal_set_item<short>(obj, row, c, src, count); break;
        case CV_32S: internal_set_item<int>(obj, row, c, src, count); break;
        case CV_32F: internal_set_item<float>(obj, row, c, src, count); break;
        case CV_64F: internal_set_item<double>(obj, row, c, src, count); break;
        }
    }
    for (r = row + 1; r < obj->rows && count > 0; r++)
    {
        for (c = 0; c < obj->cols && count > 0; c++)
        {
            switch (obj->depth())
            {
            case CV_8U:  internal_set_item<uchar>(obj, r, c, src, count); break;
            case CV_8S:  internal_set_item<schar>(obj, r, c, src, count); break;
            case CV_16U: internal_set_item<ushort>(obj, r, c, src, count); break;
            case CV_16S: internal_set_item<short>(obj, r, c, src, count); break;
            case CV_32S: internal_set_item<int>(obj, r, c, src, count); break;
            case CV_32F: internal_set_item<float>(obj, r, c, src, count); break;
            case CV_64F: internal_set_item<double>(obj, r, c, src, count); break;
            }
        }
    }
    return res;
}
CVAPI(int) core_Mat_nSetVec3b(cv::Mat *obj, int row, int col, cv::Vec3b *vals, int valsLength)
{
    return internal_Mat_set<cv::Vec3b>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetVec3d(cv::Mat *obj, int row, int col, cv::Vec3d *vals, int valsLength)
{
    return internal_Mat_set<cv::Vec3d>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetVec4f(cv::Mat *obj, int row, int col, cv::Vec4f *vals, int valsLength)
{
    return internal_Mat_set<cv::Vec4f>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetVec6f(cv::Mat *obj, int row, int col, cv::Vec6f *vals, int valsLength)
{
    return internal_Mat_set<cv::Vec6f>(obj, row, col, (char*)vals, valsLength);
}